# zulip-llm-chatbot

./: README.md  THIRDPARTY  pyproject.toml
zulip_llm/: llm_chatbot.py
